# prompt_evolver

./: .gitignore  EVO_OPTIMIZER_SPEC.md  IMPLEMENTATION_SUMMARY.md  README.md  components.py  mutation.py  optimizer.py  population.py  pyproject.toml  regression.py  scoring.py  state.py
prompt_evolver/: __init__.py  example_usage.py  metaprompt_instructions.txt  mutation.py  optimizer.py  population.py  state.py
tests/: __init__.py  test_components.py  test_integration.py  test_mutation.py  test_population.py  test_regression.py  test_scoring.py  test_state.py
