[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-evolver"
version = "0.1.0"
description = "Component-aware prompt optimization using statistical regression and evolutionary search"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
prompt_evolver = ["metaprompt_instructions.txt"]
